--- a/index.html
+++ b/index.html
@@ -205,6 +205,85 @@
       .bg-gradient-primary {
           background: linear-gradient(45deg, var(--primary-color), #0a58ca);
       }
+      .platform-overview {
+        background:
+          radial-gradient(circle at 12% 18%, rgba(244, 182, 63, 0.12), transparent 42%),
+          linear-gradient(120deg, rgba(7, 23, 53, 0.98) 0%, rgba(16, 46, 82, 0.98) 52%, rgba(29, 36, 84, 0.98) 100%);
+        border: 1px solid rgba(255, 255, 255, 0.14);
+        box-shadow: 0 16px 34px rgba(3, 12, 32, 0.22);
+      }
+      .platform-overview-title {
+        color: #f8fbff;
+        font-weight: 800;
+        margin-bottom: 0.35rem;
+        line-height: 1.15;
+      }
+      .platform-overview-kicker {
+        color: #f8fbff;
+        font-weight: 800;
+        font-size: 1.35rem;
+        line-height: 1.2;
+        margin-bottom: 0.7rem;
+      }
+      .platform-overview-text {
+        color: #dbe7f5;
+        font-size: 1.02rem;
+        line-height: 1.65;
+        margin-bottom: 0;
+      }
+      .platform-overview-list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap: 0.75rem;
+      }
+      .platform-overview-list li {
+        display: flex;
+        align-items: flex-start;
+        gap: 0.65rem;
+        color: #edf4ff;
+        font-weight: 600;
+        background: rgba(255, 255, 255, 0.04);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        border-radius: 0.8rem;
+        padding: 0.75rem 0.85rem;
+        min-height: 100%;
+      }
+      .platform-overview-list li i {
+        color: #f4b63f;
+        margin-top: 0.15rem;
+      }
+      .platform-overview-mission {
+        margin-top: 1rem;
+        padding: 0.95rem 1rem;
+        border-radius: 0.9rem;
+        border: 1px solid rgba(244, 182, 63, 0.22);
+        background: rgba(244, 182, 63, 0.08);
+        color: #f7fbff;
+        line-height: 1.6;
+      }
+      .platform-overview-mission strong {
+        color: #fde68a;
+      }
+      @media (max-width: 992px) {
+        .platform-overview-list {
+          grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+        .platform-overview-kicker {
+          font-size: 1.15rem;
+        }
+        .platform-overview-text {
+          font-size: 0.98rem;
+          line-height: 1.55;
+        }
+      }
+      @media (max-width: 576px) {
+        .platform-overview-list {
+          grid-template-columns: 1fr;
+        }
+      }
   </style>
 </head>
 <body class="d-flex flex-column min-vh-100 bg-body">
@@ -228,6 +307,29 @@
         </div>
       </div>
     </div>
+
+    <section class="platform-overview rounded-4 p-4 p-lg-5 mb-5 fade-in" aria-labelledby="platform-overview-title">
+      <div class="mb-4">
+        <h2 id="platform-overview-title" class="platform-overview-kicker">Онлайн безопасност и превенция на измами</h2>
+        <p class="platform-overview-text">
+          Онлайн безопасността е умението да пазите профилите, парите и личните си данни – така че измамници да не ви подведат чрез линкове, обяви, фалшиви сайтове или обаждания. Превенцията означава да разпознаете риска преди да кликнете, платите или споделите код.
+        </p>
+      </div>
+
+      <div class="mb-4">
+        <h3 class="platform-overview-title h4 mb-3">Как StaySafeBG ви защитава</h3>
+        <ul class="platform-overview-list">
+          <li><i class="bi bi-search"></i><span>Проверка на риск</span></li>
+          <li><i class="bi bi-lightbulb"></i><span>Ясни съвети и реални примери</span></li>
+          <li><i class="bi bi-signpost-split"></i><span>Указания за действия при съмнение</span></li>
+          <li><i class="bi bi-people"></i><span>Докладване и общност</span></li>
+        </ul>
+      </div>
+
+      <div class="platform-overview-mission">
+        Мисията ни е да направим онлайн измамите лесни за разпознаване — чрез ясни обяснения, примери и съвети, които всеки може да приложи.
+      </div>
+    </section>
     
     <div class="row align-items-stretch g-4">
       <div class="col-md-6">
