enhance platform overview section with improved styling and layout for better readability

--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@
           .home-popup-title-link:focus-visible::after {
             transform: scaleX(1);
           }
+          .home-popup-title-link-accent {
+            color: #fde68a;
+            background-image: none;
+            -webkit-background-clip: border-box;
+            background-clip: border-box;
+          }
+          .home-popup-title-link-accent::after {
+            background: #fde68a;
+          }
+          .home-popup-title-link-accent:hover,
+          .home-popup-title-link-accent:focus-visible {
+            color: #fde68a;
+            -webkit-text-fill-color: initial;
+            background-size: 0% 100%;
+          }
         .home-popup-theme .btn-outline-secondary {
           border-color: rgba(255, 255, 255, 0.38);
           color: #e5eefb;
@@ -207,23 +222,39 @@
       }
       .platform-overview {
         background:
-          radial-gradient(circle at 12% 18%, rgba(244, 182, 63, 0.12), transparent 42%),
           linear-gradient(120deg, rgba(7, 23, 53, 0.98) 0%, rgba(16, 46, 82, 0.98) 52%, rgba(29, 36, 84, 0.98) 100%);
         border: 1px solid rgba(255, 255, 255, 0.14);
         box-shadow: 0 16px 34px rgba(3, 12, 32, 0.22);
+        position: relative;
+        overflow: hidden;
       }
       .platform-overview-title {
-        color: #f8fbff;
-        font-weight: 800;
+        color: #fde68a;
+        font-weight: 700;
         margin-bottom: 0.35rem;
-        line-height: 1.15;
+        line-height: 1.2;
+        font-size: clamp(1.15rem, 0.92rem + 0.8vw, 1.5rem);
+        display: inline-flex;
+        align-items: baseline;
+        gap: 0.35rem;
+        text-shadow: none;
+        letter-spacing: -0.01em;
+        -webkit-font-smoothing: antialiased;
+      }
+      .platform-overview-title-brand {
+        display: inline-flex;
+        align-items: baseline;
       }
       .platform-overview-kicker {
-        color: #f8fbff;
-        font-weight: 800;
-        font-size: 1.35rem;
+        color: #fde68a;
+        font-weight: 700;
+        font-size: clamp(1.4rem, 1.05rem + 1.2vw, 2rem);
         line-height: 1.2;
-        margin-bottom: 0.7rem;
+        margin-bottom: 0.85rem;
+        display: block;
+        text-shadow: none;
+        -webkit-font-smoothing: antialiased;
+        letter-spacing: -0.01em;
       }
       .platform-overview-text {
         color: #dbe7f5;
@@ -236,20 +267,35 @@
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-columns: 0.9fr 1.1fr 1.35fr 0.95fr;
         gap: 0.75rem;
+        width: 100%;
       }
       .platform-overview-list li {
+        width: 100%;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         gap: 0.65rem;
         color: #edf4ff;
         font-weight: 600;
-        background: rgba(255, 255, 255, 0.04);
-        border: 1px solid rgba(255, 255, 255, 0.08);
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.045), rgba(255, 255, 255, 0.02));
+        border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 0.8rem;
         padding: 0.75rem 0.85rem;
-        min-height: 100%;
+        min-height: 0;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.04);
+        transition: transform 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;
+      }
+      .platform-overview-list li span {
+        white-space: nowrap;
+        font-size: 0.92rem;
+        line-height: 1.25;
+      }
+      .platform-overview-list li:hover {
+        transform: translateY(-2px);
+        border-color: rgba(244, 182, 63, 0.28);
+        background: linear-gradient(135deg, rgba(244, 182, 63, 0.08), rgba(255, 255, 255, 0.025));
+        box-shadow: 0 10px 16px rgba(3, 12, 32, 0.16), inset 0 1px 0 rgba(255,255,255,0.06);
       }
       .platform-overview-list li i {
         color: #f4b63f;
@@ -260,11 +306,12 @@
         padding: 0.95rem 1rem;
         border-radius: 0.9rem;
         border: 1px solid rgba(244, 182, 63, 0.22);
-        background: rgba(244, 182, 63, 0.08);
+        background: linear-gradient(135deg, rgba(244, 182, 63, 0.08), rgba(255, 255, 255, 0.03));
         color: #f7fbff;
         line-height: 1.6;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
       }
-      .platform-overview-mission strong {
+      .platform-overview-mission-accent {
         color: #fde68a;
       }
       @media (max-width: 992px) {
@@ -272,16 +319,27 @@
           grid-template-columns: repeat(2, minmax(0, 1fr));
         }
         .platform-overview-kicker {
-          font-size: 1.15rem;
+          font-size: clamp(1.25rem, 0.98rem + 0.85vw, 1.65rem);
         }
         .platform-overview-text {
           font-size: 0.98rem;
           line-height: 1.55;
         }
+        .platform-overview-list li span {
+          white-space: normal;
+          font-size: 0.95rem;
+        }
       }
       @media (max-width: 576px) {
         .platform-overview-list {
           grid-template-columns: 1fr;
+        }
+        .platform-overview-title,
+        .platform-overview-kicker {
+          line-height: 1.25;
+        }
+        .platform-overview-list li {
+          width: 100%;
         }
       }
   </style>
@@ -317,7 +375,11 @@
       </div>
 
       <div class="mb-4">
-        <h3 class="platform-overview-title h4 mb-3">Как StaySafeBG ви защитава</h3>
+        <h3 class="platform-overview-title h4 mb-3">
+          <span class="platform-overview-title-accent">Как</span>
+          <span class="platform-overview-title-brand"><span class="hero-brand">StaySafe</span><span class="hero-brand-bg">BG</span></span>
+          <span class="platform-overview-title-accent">ви защитава</span>
+        </h3>
         <ul class="platform-overview-list">
           <li><i class="bi bi-search"></i><span>Проверка на риск</span></li>
           <li><i class="bi bi-lightbulb"></i><span>Ясни съвети и реални примери</span></li>
@@ -327,7 +389,7 @@
       </div>
 
       <div class="platform-overview-mission">
-        Мисията ни е да направим онлайн измамите лесни за разпознаване — чрез ясни обяснения, примери и съвети, които всеки може да приложи.
+        <span class="platform-overview-mission-accent">Мисията ни</span> е да направим онлайн измамите лесни за разпознаване — чрез ясни обяснения, примери и съвети, които всеки може да приложи.
       </div>
     </section>
     
@@ -340,7 +402,7 @@
                 <img src="/shield-icon.png" alt="" class="tips-logo-icon" aria-hidden="true">
               </div>
               <h2 class="home-popup-title">
-                <a href="tips.html" class="home-popup-title-link">Актуални съвети</a>
+                <a href="tips.html" class="home-popup-title-link home-popup-title-link-accent">Актуални съвети</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
