refactor styling for home popup title link and update report title line responsiveness

--- a/index.html
+++ b/index.html
@@ -183,21 +183,6 @@
           .home-popup-title-link:focus-visible::after {
             transform: scaleX(1);
           }
-          .home-popup-title-link-accent {
-            color: #fde68a;
-            background-image: none;
-            -webkit-background-clip: border-box;
-            background-clip: border-box;
-          }
-          .home-popup-title-link-accent::after {
-            background: #fde68a;
-          }
-          .home-popup-title-link-accent:hover,
-          .home-popup-title-link-accent:focus-visible {
-            color: #fde68a;
-            -webkit-text-fill-color: initial;
-            background-size: 0% 100%;
-          }
         .home-popup-theme .btn-outline-secondary {
           border-color: rgba(255, 255, 255, 0.38);
           color: #e5eefb;
@@ -402,7 +387,7 @@
                 <img src="/shield-icon.png" alt="" class="tips-logo-icon" aria-hidden="true">
               </div>
               <h2 class="home-popup-title">
-                <a href="tips.html" class="home-popup-title-link home-popup-title-link-accent">Актуални съвети</a>
+                <a href="tips.html" class="home-popup-title-link">Актуални съвети</a>
               </h2>
             </div>
             <p class="text-white-50 mb-4">Научете за най-новите схеми и защитете себе си и близките си.</p>
