add shield icon to tips page title for enhanced visual appeal

--- a/tips.html
+++ b/tips.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="articles-page-indicator">
         <div class="articles-page-title-wrap">
-          <h1 class="articles-page-title mb-1">Съвети</h1>
+          <h1 class="articles-page-title mb-1">Съвети <img src="/shield-icon.png" alt="" class="articles-page-title-icon-image" aria-hidden="true"></h1>
         </div>
         <div class="articles-page-title-line" tabindex="0" aria-label="Акцентна линия за заглавието"></div>
         <p class="articles-page-subtitle mb-0">Актуални съвети и анализи за онлайн сигурност</p>
