add breadcrumb navigation and back button to privacy policy page for improved user navigation

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,6 +16,13 @@
   <header id="app-header"></header>
 
   <main class="container py-4 py-lg-5">
+    <nav class="pp-breadcrumb mb-4" aria-label="breadcrumb">
+      <ol class="breadcrumb mb-0">
+        <li class="breadcrumb-item"><a href="index.html">Начало</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Политика за поверителност</li>
+      </ol>
+    </nav>
+
     <section class="pp-hero mb-4">
       <div class="pp-hero-inner">
         <div class="pp-kicker">StaySafeBG</div>
@@ -99,6 +106,13 @@
         <span>Последна актуализация: февруари 2026 г.</span>
       </div>
     </section>
+
+    <div class="pp-back-wrap mt-4">
+      <button type="button" id="pp-back-btn" class="btn pp-back-btn">
+        <i class="bi bi-arrow-left"></i>
+        <span>Назад към предишната страница</span>
+      </button>
+    </div>
   </main>
 
   <footer id="app-footer"></footer>
