improve clarity of online safety description in platform overview section

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       <div class="mb-4">
         <h2 id="platform-overview-title" class="platform-overview-kicker">Онлайн безопасност и превенция на измами</h2>
         <p class="platform-overview-text">
-          Онлайн безопасността е умението да пазите профилите, парите и личните си данни – така че измамници да не ви подведат чрез линкове, обяви, фалшиви сайтове или обаждания. Превенцията означава да разпознаете риска преди да кликнете, платите или споделите код.
+          Това е умението да пазите профилите, парите и личните си данни – така че измамници да не ви подведат чрез линкове, обяви, фалшиви сайтове или обаждания. Превенцията означава да разпознаете риска преди да кликнете, платите или споделите код.
         </p>
       </div>
 
