--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -18,7 +18,7 @@
   <main class="container py-4 py-lg-5">
     <nav class="pp-breadcrumb mb-4" aria-label="breadcrumb">
       <ol class="breadcrumb mb-0">
-        <li class="breadcrumb-item"><a href="index.html">Начало</a></li>
+        <li class="breadcrumb-item"><a id="pp-breadcrumb-back-link" href="index.html">Начало</a></li>
         <li class="breadcrumb-item active" aria-current="page">Политика за поверителност</li>
       </ol>
     </nav>
