enhance community section UI with updated titles and styles for better user engagement

--- a/community.html
+++ b/community.html
@@ -28,7 +28,7 @@
           </h1>
         </div>
         <div class="articles-page-title-line" tabindex="0" aria-label="Акцентна линия за заглавието"></div>
-        <p class="articles-page-subtitle mb-0">Тук ще намерите одобрените доклади от потребителите, за да се предпазвате от актуални измами.</p>
+        <p class="articles-page-subtitle mb-0">Тук ще намерите одобрени потребителски доклади, споделени с цел превенция и защита от актуални измами.</p>
       </div>
     </div>
   </div>
@@ -36,8 +36,13 @@
   <main class="container mb-5" id="page-content">
 
     <section>
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2 class="h4 mb-0">Одобрени доклади</h2>
+      <div class="community-section-header mb-3">
+        <div class="community-section-header__badge">
+          <i class="bi bi-patch-check-fill" aria-hidden="true"></i>
+          <span>Проверено съдържание</span>
+        </div>
+        <h2 class="community-section-header__title mb-0">Одобрени потребителски доклади</h2>
+        <p class="community-section-header__text mb-0">Публикувани сигнали след преглед от екипа на <span class="community-brand-wordmark"><span class="community-brand-wordmark__main">StaySafe</span><span class="community-brand-wordmark__bg">BG</span></span>, за да подпомогнат информираността и превенцията.</p>
       </div>
 
       <div id="community-reports-list" class="row row-cols-1 row-cols-lg-2 g-4">
