enhance scam check form with improved button layout and responsive styles for better usability

--- a/scam-check.html
+++ b/scam-check.html
@@ -28,7 +28,7 @@
                        <div class="search-input-group input-group input-group-lg">
                           <input id="scam-check-input" type="text" class="form-control" placeholder="напр. fake-bank-login.com или http://112.240.73.244:51487/bin.sh" aria-label="Данни за проверка">
                           <button id="scam-check-submit" class="btn ss-search-btn" type="submit">
-                              <i class="bi bi-search me-2"></i>Провери
+                              <i class="bi bi-search me-2 ss-search-btn-icon"></i><span class="ss-search-btn-text">Провери</span>
                           </button>
                       </div>
                   </form>
