enhance scam type selection with responsive labels and mobile dropdown for improved usability

--- a/report-scam.html
+++ b/report-scam.html
@@ -31,7 +31,7 @@
                       <div class="mb-3">
                           <label for="scamType" class="form-label">Тип измама</label>
                           <select class="form-select" id="scamType">
-                              <option selected>Изберете тип измама...</option>
+                              <option value="" selected>Изберете тип измама...</option>
                               <option value="phishing">Фишинг (Имейл/Сайт)</option>
                               <option value="phone">Телефонна измама</option>
                               <option value="investment">Инвестиционна измама</option>
