--- a/admin.html
+++ b/admin.html
@@ -16,12 +16,6 @@
   <main class="container py-4" id="page-content" style="display: none;">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 id="dashboard-title">Админ Панел</h1>
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createArticleModal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg me-2" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2z"/>
-            </svg>
-            Добави Съвет
-        </button>
       </div>
        
       <div class="row mb-4">
@@ -293,7 +287,15 @@
 
       <div class="d-flex justify-content-between align-items-center mt-5 mb-3">
         <h2 class="mb-0">Управление на съвети</h2>
-        <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
+        <div class="d-flex align-items-center gap-2">
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createArticleModal" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg me-2" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2z"/>
+            </svg>
+            Добави Съвет
+          </button>
+          <button class="btn btn-outline-primary" id="btn-refresh-articles" type="button">Обнови списъка</button>
+        </div>
       </div>
       <div class="row g-3 mb-3">
         <div class="col-md-6">
