--- a/index.html
+++ b/index.html
@@ -279,32 +279,36 @@
       .platform-overview-list li {
         width: 100%;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         gap: 0.65rem;
         color: #edf4ff;
-        font-weight: 600;
-        background: linear-gradient(135deg, rgba(255, 255, 255, 0.045), rgba(255, 255, 255, 0.02));
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 0.8rem;
-        padding: 0.75rem 0.85rem;
+        font-weight: 500;
+        background: rgba(255, 255, 255, 0.025);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        border-left: 3px solid rgba(244, 182, 63, 0.55);
+        border-radius: 0.55rem;
+        padding: 0.7rem 0.85rem 0.7rem 0.75rem;
         min-height: 0;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.04);
-        transition: transform 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;
+        box-shadow: none;
+        transition: none;
+        cursor: default;
       }
       .platform-overview-list li span {
-        white-space: nowrap;
+        white-space: normal;
         font-size: 0.92rem;
-        line-height: 1.25;
+        line-height: 1.3;
       }
       .platform-overview-list li:hover {
-        transform: translateY(-2px);
-        border-color: rgba(244, 182, 63, 0.28);
-        background: linear-gradient(135deg, rgba(244, 182, 63, 0.08), rgba(255, 255, 255, 0.025));
-        box-shadow: 0 10px 16px rgba(3, 12, 32, 0.16), inset 0 1px 0 rgba(255,255,255,0.06);
+        transform: none;
+        border-color: rgba(255, 255, 255, 0.08);
+        border-left-color: rgba(244, 182, 63, 0.55);
+        background: rgba(255, 255, 255, 0.025);
+        box-shadow: none;
       }
       .platform-overview-list li i {
         color: #f4b63f;
-        margin-top: 0.15rem;
+        margin-top: 0.12rem;
+        opacity: 0.9;
       }
       .platform-overview-mission {
         margin-top: 1rem;
