--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             color: inherit;
             text-decoration: none;
             position: relative;
+            padding-right: 0.2rem;
             background-image: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
             background-size: 0% 100%;
             background-repeat: no-repeat;
@@ -179,19 +180,20 @@
           .home-popup-title-link::after {
             content: "";
             position: absolute;
-            left: 0;
+            left: -0.08rem;
             bottom: -0.28rem;
-            width: 100%;
+            width: calc(100% + 0.36rem);
             height: 0.16rem;
             border-radius: 999px;
             background: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
-            transform: scaleX(0.35);
+            transform: scaleX(1);
             transform-origin: left center;
             opacity: 0.9;
             transition: transform 0.25s ease;
           }
           .home-popup-title-link:hover,
-          .home-popup-title-link:focus-visible {
+          .home-popup-title-link:focus-visible,
+          .home-popup-title-link:active {
             transform: translateY(-1px);
             opacity: 1;
             color: transparent;
@@ -200,7 +202,8 @@
             text-decoration: none;
           }
           .home-popup-title-link:hover::after,
-          .home-popup-title-link:focus-visible::after {
+          .home-popup-title-link:focus-visible::after,
+          .home-popup-title-link:active::after {
             transform: scaleX(1);
           }
         .home-popup-theme .btn-outline-secondary {
