--- a/index.html
+++ b/index.html
@@ -479,12 +479,8 @@
             </div>
           </div>
           
-          <div class="mt-auto pt-4 border-top">
-             <div class="d-flex align-items-center justify-content-between text-muted small">
-                 <span><i class="bi bi-circle-fill text-success small me-1"></i> Активна общност</span>
-                 <span id="home-approved-reports-count">Одобрени доклади</span>
-             </div>
-             <a class="btn btn-warning w-100 mt-3 rounded-pill" href="community.html">
+          <div class="mt-auto pt-3">
+             <a class="btn btn-warning w-100 rounded-pill" href="community.html">
                  <i class="bi bi-chat-dots me-2"></i>Виж всички доклади
              </a>
           </div>
