--- a/index.html
+++ b/index.html
@@ -343,6 +343,30 @@
         }
       }
       @media (max-width: 576px) {
+        .home-popup-theme .d-flex.align-items-center.gap-3.mb-3 {
+          align-items: flex-end !important;
+          gap: 0.55rem !important;
+        }
+        .home-popup-theme .feature-icon {
+          width: 3.35rem;
+          height: 3.35rem;
+          font-size: 1.65rem;
+        }
+        .tips-logo-icon {
+          width: 1.7rem;
+          height: 1.7rem;
+          transform: scale(1.95);
+        }
+        .home-popup-title-link {
+          white-space: nowrap;
+          font-size: clamp(1.5rem, 5.8vw, 1.78rem);
+          gap: 0.15rem;
+          line-height: 1.02;
+        }
+        .home-popup-title-link::after {
+          bottom: -0.06rem;
+          height: 0.14rem;
+        }
         .hero-section .hero-cta-group {
           flex-direction: column;
           flex-wrap: nowrap !important;
